src/test/resources/refCompilerOutput/invalid/syntaxErr/function/thisIsNotC.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:12 -- extraneous input '*' expecting ID
Syntactic Error at 13:4 -- no viable alternative at input '*'
Syntactic Error at 13:9 -- no viable alternative at input '*'
Syntactic Error at 17:2 -- mismatched input 'int' expecting <EOF>
4 parser error(s) detected, no further compilation attempted.
